Fix bug that prevented offline playback

--- a/AmpFin.xcodeproj/xcshareddata/xcschemes/iOS.xcscheme
+++ b/AmpFin.xcodeproj/xcshareddata/xcschemes/iOS.xcscheme
@@ -72,6 +72,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "ShelfPlayer"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
