--- a/AmpFin.xcodeproj/xcshareddata/xcschemes/iOS.xcscheme
+++ b/AmpFin.xcodeproj/xcshareddata/xcschemes/iOS.xcscheme
@@ -72,7 +72,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
-      customArchiveName = "ShelfPlayer"
+      customArchiveName = "AmpFin"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
