--- a/AmpFin.xcodeproj/xcshareddata/xcschemes/iOS.xcscheme
+++ b/AmpFin.xcodeproj/xcshareddata/xcschemes/iOS.xcscheme
@@ -31,7 +31,7 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      intentQueryString = "Spiele Musik"
+      intentQueryString = "play music"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -53,7 +53,7 @@
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
-      intentQueryString = "Spiele Musik"
+      intentQueryString = "play music"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
