--- a/Siri Extension/Info.plist
+++ b/Siri Extension/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>INIntentsSupported</key>
+	<array>
+		<string>INAddMediaIntent</string>
+	</array>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
@@ -12,7 +16,7 @@
 			<array/>
 			<key>IntentsSupported</key>
 			<array>
-				<string>INSearchForMediaIntent</string>
+				<string>INAddMediaIntent</string>
 			</array>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
