Added features toggle

--- a/Config/Debug.xcconfig.template
+++ b/Config/Debug.xcconfig.template
@@ -10,5 +10,8 @@
 
 #include "Base.xcconfig"
 
+
+SWIFT_ACTIVE_COMPILATION_CONDITIONS = DEBUG ENABLE_ALL_FEATURES
+
 DEVELOPMENT_TEAM = ABC123456
 BUNDLE_ID_PREFIX = me.change
