--- a/Config/Base.xcconfig
+++ b/Config/Base.xcconfig
@@ -9,3 +9,4 @@
 // https://help.apple.com/xcode/#/dev745c5c974
 
 MARKETING_VERSION = 1.2.2
+SWIFT_ACTIVE_COMPILATION_CONDITIONS = ENABLE_ALL_FEATURES
