--- a/Siri Extension/Entitlements.entitlements
+++ b/Siri Extension/Entitlements.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.io.rfk.ampfin</string>
+		<string>group.${BUNDLE_ID_PREFIX}.ampfin</string>
 	</array>
 </dict>
 </plist>
