--- a/iOS/Entitlements.entitlements
+++ b/iOS/Entitlements.entitlements
@@ -8,7 +8,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.io.rfk.ampfin</string>
+		<string>group.${BUNDLE_ID_PREFIX}.ampfin</string>
 	</array>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
