--- a/tvOS/Entitlements.entitlements
+++ b/tvOS/Entitlements.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.io.rfk.ampfin</string>
+		<string>group.${BUNDLE_ID_PREFIX}.ampfin</string>
 	</array>
 </dict>
 </plist>
