--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -20,5 +20,15 @@
 	<array>
 		<string>audio</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSAllowsArbitraryLoadsUsageDescription</key>
+		<dict>
+			<key>NSATSExceptionThirdPartyServiceConnectionUsage</key>
+			<dict/>
+		</dict>
+	</dict>
 </dict>
 </plist>
