Added a random album setting

--- a/iOS/Settings.bundle/Root.plist
+++ b/iOS/Settings.bundle/Root.plist
@@ -18,6 +18,16 @@
 		</dict>
 		<dict>
 			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Show random instead of recent albums</string>
+			<key>Key</key>
+			<string>libraryRandomAlbums</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
 			<string>Siri integration</string>
