--- a/Multiplatform/Settings.bundle/Acknowledgements.plist
+++ b/Multiplatform/Settings.bundle/Acknowledgements.plist
@@ -12,7 +12,7 @@
 			<key>Title</key>
 			<string>Contributors</string>
 			<key>FooterText</key>
-			<string>@gnattu (GitHub): Initial iPadOS support &amp; lazy loading</string>
+			<string>@gnattu (GitHub): Initial iPadOS support, lazy loading &amp; Spotlight improvents</string>
 		</dict>
 		<dict>
 			<key>Type</key>
