--- a/Siri Extension/Info.plist
+++ b/Siri Extension/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>INIntentsSupported</key>
-	<array>
-		<string>INAddMediaIntent</string>
-	</array>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
@@ -18,6 +14,10 @@
 			<array>
 				<string>INAddMediaIntent</string>
 				<string>INPlayMediaIntent</string>
+			</array>
+			<key>SupportedMediaCategories</key>
+			<array>
+				<string>INMediaCategoryMusic</string>
 			</array>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
