Added SearchForMediaIntent, added Playlists to Spotlight index, added Shortcuts, playback info, donations & handoff are working now
I would call this the "Spotlight update", you can now search for artists & albums, get metadata provided by Apple and open them in AmpFin. All of this is really cool :)

--- a/Multiplatform/Info.plist
+++ b/Multiplatform/Info.plist
@@ -30,7 +30,10 @@
 	</dict>
 	<key>NSUserActivityTypes</key>
 	<array>
-		<string>INPlayMediaIntent</string>
+		<string>io.rfk.ampfin.artist</string>
+		<string>io.rfk.ampfin.album</string>
+		<string>io.rfk.ampfin.playlist</string>
+		<string>io.rfk.ampfin.track</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
