--- a/Siri Extension/Info.plist
+++ b/Siri Extension/Info.plist
@@ -14,6 +14,7 @@
 			<array>
 				<string>INAddMediaIntent</string>
 				<string>INPlayMediaIntent</string>
+				<string>INSearchForMediaIntent</string>
 			</array>
 			<key>SupportedMediaCategories</key>
 			<array>
