--- a/Configuration/Base.xcconfig
+++ b/Configuration/Base.xcconfig
@@ -9,4 +9,4 @@
 // https://help.apple.com/xcode/#/dev745c5c974
 
 MARKETING_VERSION = 1.5.0
-SWIFT_ACTIVE_COMPILATION_CONDITIONS = ENABLE_ALL_FEATURES
+SWIFT_ACTIVE_COMPILATION_CONDITIONS = DEBUG
