Added an option to pause the now playing background

--- a/Multiplatform/Settings.bundle/Root.plist
+++ b/Multiplatform/Settings.bundle/Root.plist
@@ -28,6 +28,16 @@
 		</dict>
 		<dict>
 			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Pause now playing animation</string>
+			<key>Key</key>
+			<string>haltNowPlayingBackground</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
 			<string>Audio-Quality</string>
