Improve color extraction

--- a/AmpFin.xcodeproj/xcshareddata/xcschemes/Multiplatform.xcscheme
+++ b/AmpFin.xcodeproj/xcshareddata/xcschemes/Multiplatform.xcscheme
@@ -49,6 +49,13 @@
             ReferencedContainer = "container:AmpFin.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CORESVG_VERBOSE"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
