Add support for default privacy setting for new playlists

--- a/Multiplatform/Settings.bundle/Root.plist
+++ b/Multiplatform/Settings.bundle/Root.plist
@@ -38,6 +38,16 @@
 		</dict>
 		<dict>
 			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Default new playlists as private</string>
+			<key>Key</key>
+			<string>newPlaylistDefaultPrivate</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
 			<string>Audio-Quality</string>
